deploy: 7c7928a87a9bef49bf8106da766858f1744113cc

--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
 				<li><a href="/contact" role="button" class="button">Contact</a></li>
 			</ul>
 		</nav>
-		<div id="page" class="content" ><h1>Kar's thoughts</h1><p>I'm using zine for this, hoping it's going to be good enough. Also <a href="https://catppuccin.com">catpuccin</a></p></div>
+		<div id="page" class="content" ><h1>About</h1><p>I'm Karitham, a passionate contributor to the open-source community with a drive to build and explore.</p><p>Go expert, Kubernetes sufferer, and cinema (both live/animation) enjoyer.</p><p>I'm constantly tinkering and bringing ideas to life. I'm working towards having a place to share and give back to the community.</p><p>A place with real thoughts written by a real human.</p></div>
 	</div>
 
     </div>
