--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
 				<li><a href="/contact" role="button" class="button">Contact</a></li>
 			</ul>
 		</nav>
-		<div id="page" class="content" ><h1>Kar's thoughts</h1><p>I'm using zine for this, hoping it's going to be good enough. Also <a href="https://catppuccin.com">catpuccin</a></p></div>
+		<div id="page" class="content" ><h1>Contact</h1><h2>TODO(@Karitham): Contact info</h2></div>
 	</div>
 
     </div>
