--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         flex-direction: row;
         justify-content: space-evenly;
       }
+
+      #main {
+        padding: 0 1rem;
+      }
     </style>
     <ul>
       <li><a href="/" role="button" class="button">~/</a></li>
