--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
   >
-    <title id="title">Karitham&apos;s Thoughts- Kar</title>
+  <link
+      rel="icon"
+      href="https://avatars.githubusercontent.com/u/57440386"
+      type="image/x-icon"
+    >
+    <title id="title">Karitham&apos;s Thoughts - Kar</title>
       <link rel="stylesheet" type="text/css" href="/normalize.css">
       <link rel="stylesheet" type="text/css" href="/ctp.css">
       <link rel="stylesheet" type="text/css" href="/style.css">
@@ -53,10 +58,11 @@
       .button {
         color: var(--ctp-text); /* White text for readability */
         text-decoration: none;
-        padding: 10px 20px;
         border: none;
-        border-radius: 4px;
         cursor: pointer;
+        text-align: center;
+        width: 100%;
+        padding: 1rem;
         font-size: 16px;
         font-weight: bold;
       }
@@ -64,6 +70,7 @@
       .button:hover {
         background: var(--ctp-base);
         color: var(--ctp-text);
+        transition: color,background-color 0.2s ease-in;
       }
 
       #content {
@@ -81,9 +88,7 @@
       }
 
       #nav {
-        padding: 1rem;
         background-color: var(--ctp-crust);
-        border-radius: 0 0 1rem 1rem;
       }
 
       #nav ul {
@@ -93,6 +98,12 @@
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+      }
+
+      #nav li {
+        width: 100%;
+        justify-content: center;
+        display: flex;
       }
 
       #main {
@@ -107,7 +118,7 @@
     </ul>
   </nav>
   <div id="main">
-    <h1>Kar's thoughts</h1><p>I'm using zine for this, hoping it's going to be good enough. Also <a href="https://catppuccin.com" target="_blank">catpuccin</a></p>
+    <h1>Kar's thoughts</h1><p>I'm trying to get better at writing, and I think the best way to do that is to actually write stuff.</p><p>By regularly writing down my ideas and posting them here, I hope to write more clearly and organize my thoughts better.</p><p>I'll be writing about many topics that interest me, from technology and science to philosophy and personal thoughts. Each post will be a chance for me to challenge myself, learn something new, and hopefully give something useful to anyone who reads it.</p><p>So, welcome to my blog! I hope you'll join me on this writing journey, and maybe we can learn and grow together as we put our thoughts into words.</p><p>The website is written through <a href="https://zine-ssg.io" target="_blank">zine</a>. I enjoy using cutting edge tech. I use <a href="https://catppuccin.com" target="_blank">catpuccin</a> for all my systems so the theme is based on the palette. I've found it fairly difficult to consistenly get good styling, and starting from a great palette helps a lot.</p>
   </div>
 
     </div>
